--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -1,6 +1,6 @@
 {% extends 'learning_logs/base.html' %}
 
-{block content}
+{% block content %}
 
   <p>Topic: {{ topic }}</p>
 
@@ -17,5 +17,5 @@
         </li>
       {% endfor %}
   </ul>
-  
+
 {% endblock content %}
