--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -44,5 +44,11 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+
+    <div class="container">
+      <div class="page-header">
+        {% block header %}{% endblock header %}
+      </div>
+    </div>
   </body>
 </html>
