--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -49,6 +49,10 @@
       <div class="page-header">
         {% block header %}{% endblock header %}
       </div>
-    </div>
+      <div>
+        {% block content %}{% enblock content %}
+      </div>
+
+    </div><!-- /container -->
   </body>
 </html>
