[BUG] Add a 'd' to endblock content

--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -50,7 +50,7 @@
         {% block header %}{% endblock header %}
       </div>
       <div>
-        {% block content %}{% enblock content %}
+        {% block content %}{% endblock content %}
       </div>
 
     </div><!-- /container -->
