--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,4 +1,9 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+  <h2>Log in to your account.</h2>
+{% endblock header %}
 
 {% block content %}
 
