--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -13,7 +13,7 @@
 
   <form method="post" action="{% url 'users:login' %}">
       {% csrf_token %}
-      {{ form.as_p }}
+      {{ bootstrap_form form }}
 
       <button name="submit">log in</button>
       <input type="hidden" name="next" value="{% url 'learning_logs:index' %}" />
