--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -15,7 +15,9 @@
       {% csrf_token %}
       {{ bootstrap_form form }}
 
-      <button name="submit">log in</button>
+      {% buttons %}
+        <button name="submit" class="btn btn-primary">log in</button>
+      {% endbuttons %}
       <input type="hidden" name="next" value="{% url 'learning_logs:index' %}" />
   </form>
     
