--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-  <form method="post" action="{% url 'users:login' %}">
+  <form method="post" action="{% url 'users:login' %}" class="form">
       {% csrf_token %}
       {{ bootstrap_form form }}
 
