--- a/learning_logs/templates/learning_logs/new_topic.html
+++ b/learning_logs/templates/learning_logs/new_topic.html
@@ -9,7 +9,7 @@
 
   <p>Add a new topic:</p>
 
-  <form action="{% url 'learning_logs:new_topic' %}" method="post">
+  <form action="{% url 'learning_logs:new_topic' %}" method="post" class="form">
       {% csrf_token %}
       {{ form.as_p }}
       <button name="submit">add topic</button>
