--- a/learning_logs/templates/learning_logs/new_topic.html
+++ b/learning_logs/templates/learning_logs/new_topic.html
@@ -11,7 +11,7 @@
 
   <form action="{% url 'learning_logs:new_topic' %}" method="post" class="form">
       {% csrf_token %}
-      {{ form.as_p }}
+      {% bootstrap_form form %}
       <button name="submit">add topic</button>
   </form>
 
