--- a/learning_logs/templates/learning_logs/new_topic.html
+++ b/learning_logs/templates/learning_logs/new_topic.html
@@ -12,7 +12,9 @@
   <form action="{% url 'learning_logs:new_topic' %}" method="post" class="form">
       {% csrf_token %}
       {% bootstrap_form form %}
-      <button name="submit">add topic</button>
+      {% buttons %}
+        <button name="submit">add topic</button>
+      {% endbuttons %}
   </form>
 
 {% endblock content %}
