--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -1,5 +1,9 @@
 {% extends 'learning_logs/base.html' %}
 
+{% block header %}
+  <h2>{{ topic }}</h2>
+{% endblock header %}
+
 {% block content %}
 
   <p>Topic: {{ topic }}</p>
